# SimplifyBMP

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  bmpsavefile.c  simplify_bmp.c
src/: bmp.h  bmpdispose.c  bmploadfile.c  bmpsavefile.c  bmpshowinfo.c  portable_endian.h  simplify_bmp.c
